test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-oknil-borrowed.good
init-var-nonnil-borrowed-from-oknil-borrowed.chpl:9: error: cannot initialize variable 'lhs' of non-nilable type 'borrowed MyClass' from a nilable 'borrowed MyClass?'
